create smaller tiles --max-nodes=700000

--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -229,7 +229,7 @@ SPLITTER_OPTIONS_OSB := $(SPLITTER_COMMON_OPTIONS) --split-file=$(REGIONPATH)/ra
 SPLITTER_OPTIONS_MAXSPEED := $(SPLITTER_COMMON_OPTIONS) --split-file=$(REGIONPATH)/raw_data/maxspeedsplit/areas.list --cache=$(SPLITTER_CACHE)/maxspeed $(GEONAMES)
 SPLITTER_OPTIONS_ADDR := $(SPLITTER_COMMON_OPTIONS) --split-file=$(REGIONPATH)/raw_data/addrsplit/areas.list --cache=$(SPLITTER_CACHE)/addr $(GEONAMES)
 else
-SPLITTER_OPTIONS := $(SPLITTER_COMMON_OPTIONS) --mapid=$(TILE_PREFIX)0$(TILE_START) --max-nodes=1000000 --cache=$(SPLITTER_CACHE)/basemap $(GEONAMES)
+SPLITTER_OPTIONS := $(SPLITTER_COMMON_OPTIONS) --mapid=$(TILE_PREFIX)0$(TILE_START) --max-nodes=700000 --cache=$(SPLITTER_CACHE)/basemap $(GEONAMES)
 SPLITTER_OPTIONS_BOUNDARY := $(SPLITTER_COMMON_OPTIONS) --mapid=$(TILE_PREFIX)0$(TILE_START) --max-nodes=1000000 --cache=$(SPLITTER_CACHE)/bounds $(GEONAMES)
 SPLITTER_OPTIONS_KEEPRIGHT := $(SPLITTER_COMMON_OPTIONS) --mapid=$(TILE_PREFIX)0$(TILE_START) --max-nodes=200000 --cache=$(SPLITTER_CACHE)/keepright $(GEONAMES)
 SPLITTER_OPTIONS_OSB := $(SPLITTER_COMMON_OPTIONS) --mapid=$(TILE_PREFIX)0$(TILE_START) --max-nodes=500000 --cache=$(SPLITTER_CACHE)/osb $(GEONAMES)
